
1.0b18 (unreleased)
===================

- Introduce environment option ``connect_mode``, either 'ssh+sudo' (default) or
  plain 'ssh'.

- Archive: recognize ``.tar.xz`` files and extract them with ``tar``.

- Fix bug in CMMI verify that would always raise UpdateNeeded due to a path
  mismatch (#13145).

- File component: apply character encoding when reading and writing files.
  (#13165)


1.0b17 (2013-12-06)
===================

- Mercurial clone: refuse to update if there are uncommitted changes or
  outgoing changesets.

- Mercurial clone: added an option to avoid updating existing clones, which is
  often desirable during development.


1.0b16 (2013-11-29)
===================

- Improve the bootstrap/upgrade fix for #13049: the bootstrap template needed a
  second improvement.

1.0b15 (2013-11-29)
===================

- Try to fix #13049 - will only work once the dev version is already at least
  at b15. Not sure whether it really does the job, though. Hard to test.

- Make environment and host arguments for running ``batou local`` optional.
  ``dev`` and ``localhost`` are the defaults now. Fixes #13034

- Allow specifying secrets with [component:xy] in addition to [xy] to make it
  easier to discover when used to the environment overrides. Both options are
  supported now. Fixes #13003

- Refactor Python virtualenv and package management. Provide explicit knowledge
  about Python versions 2.4, 2.5, 2.6, 2.7, 3.1, 3.2, and 3.3 to use compatible
  virtualenv/pip/setuptools versions and commands. Fixes #12941

  NOTE: The API for batou.lib.python.Package has changed in
  backwards-incompatible ways:

  Package() needs to be added to a VirtualEnv component. Before::

    self += VirtualEnv(...)
    self += Package(...)

  Now::

    venv = VirtualEnv(...)
    self += venv
    venv += Package(...)

  Package parameter ``pip_install_options`` has been renamed to
  ``install_options``.

- Use ``urllib`` module instead of ``wget`` command for cross platform